[package]
name = "tubetti"
version = "0.0.1"
edition = "2021"
description = "Serve &[u8] data at a localhost url with minimal configuration"
repository = "https://github.com/molenick/tubetti"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["development-tools::testing", "asynchronous"]
keywords = ["test", "http"]

[dependencies]
tokio = { version = "1.43.0" }
axum = "0.8.1"
axum-extra = "0.10.0"
axum-range = "0.5.0"
bytes = "1.10.0"

[dev-dependencies]
reqwest = "0.12.12"