[package]
name = "tubetti"
version = "0.0.1"
edition = "2021"
description = "Serve &[u8] data at a localhost url with minimal configuration"
repository = "https://github.com/molenick/tubetti"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]

strum = { version = "0.26", features = ["strum_macros", "derive"] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1"
axum = "0.7.9"
axum-extra = "0.9.6"
axum-range = "0.4.0"
bytes = "1.10.0"

[dev-dependencies]
reqwest = "0.12.9"