[package]
name = "tubetti"
version = "0.0.6"
edition = "2024"

description = "Serve &[u8] data at a localhost url with minimal configuration"
repository = "https://github.com/molenick/tubetti"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["development-tools::testing", "asynchronous"]
keywords = ["test", "http"]

[dependencies]
tokio = { version = "1.43.0" }
axum = "0.8.1"
axum-extra = "0.10.0"
axum-range = "0.5.0"
bytes = "1.10.0"
thiserror = "2.0.11"

[dev-dependencies]
reqwest = "0.12.12"
